# SandboxOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TodoList.md  main.cpp
apps/: CMakeLists.txt
apps/HelloWord/: CMakeLists.txt  HappyCube.cpp  HappyCube.hpp  HelloWordApp.cpp  HelloWordApp.hpp  main.cpp
apps/HelloWord/shaders/: BasicShader.frag  BasicShader.vert
apps/Lighting/: BasicCube.hpp  CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.hpp  LightingApp.hpp  ViewportLayer.cpp  ViewportLayer.hpp  main.cpp
apps/Lighting/shaders/: BasicShader.frag  BasicShader.vert
apps/MeshLoading/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.hpp  MeshLoadingApp.hpp  MeshLoadingLayer.cpp  MeshLoadingLayer.hpp  OverlayInfoLayer.cpp  OverlayInfoLayer.hpp  ViewportLayer.cpp  ViewportLayer.hpp
apps/MeshLoading/assets/GravelyPlane/: GravelyPlane.mtl
apps/MeshLoading/shaders/: BasicShader.vert  modelShader.frag
apps/Sandbox/: CMakeLists.txt  MeshLoadingApp.hpp  MeshLoadingLayer.cpp  MeshLoadingLayer.hpp  OverlayInfoLayer.cpp  OverlayInfoLayer.hpp  main.cpp
apps/Sandbox/shaders/: modelShader.vert
apps/Sandbox2/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.hpp  Sandbox.cpp  Sandbox.hpp  SimulatedEntity.hpp  main.cpp
apps/Sandbox2/shaders/: squareShader.frag  squareShader.vert
apps/SandboxAdvancedLighting/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.hpp  LightingScene.cpp  LightingScene.hpp  Sandbox.cpp  TrackballCameraMover.cpp  TrackballCameraMover.hpp
apps/SandboxAdvancedLighting/shaders/: modelShader.frag  pointLightCube.frag  pointLightCube.geom  pointLightCube.vert
apps/SandboxAdvancedOpenGL/: CMakeLists.txt  ColoredHouseScene.cpp  ColoredHouseScene.hpp  EditorLayer.cpp  EditorLayer.hpp  ExploadingModelScene.cpp  ExploadingModelScene.hpp  InstanceRenderingScene.cpp  InstanceRenderingScene.hpp  NormalVisualizationScene.cpp  NormalVisualizationScene.hpp  Sandbox.cpp  Sandbox.hpp  ViewportScene.cpp  ViewportScene.hpp  main.cpp
apps/SandboxAdvancedOpenGL/shaders/: ColoredQuad.frag  ColoredQuad.vert  ExploadingModel.frag  ExploadingModel.geom  ExploadingModel.vert  GeomTrial.frag  GeomTrial.geom  GeomTrial.vert  InstanceModel.frag  InstanceModel.vert  NormalVis.geom  NormalVis.vert
apps/SandboxNavigationAndBackground/: ArcballCameraMover.cpp  ArcballCameraMover.hpp  CMakeLists.txt  CameraMover.cpp  CameraMover.hpp  CylinderCameraMover.cpp  CylinderCameraMover.hpp  EditorLayer.cpp  EditorLayer.hpp  MeshLoadingScene.cpp  MeshLoadingScene.hpp  OldModelMover.cpp  OldModelMover.hpp  Sandbox.cpp  Sandbox.hpp  TrackballCameraMover.cpp  TrackballCameraMover.hpp  TurntableCameraMover.cpp  TurntableCameraMover.hpp
apps/SandboxNavigationAndBackground/shaders/: BackgroundGradient.frag  BackgroundInfiniteGrid.frag  BackgroundInfiniteGrid.vert  BackgroundVignette.frag  BackgroundVignette.vert  BasicModelShader.frag
cmake/: helper.cmake
libs/: CMakeLists.txt
libs/core/: Application.cpp  Application.hpp  BasicRenderer.cpp  BasicRenderer.hpp  CMakeLists.txt  Camera.hpp  CoreExport.hpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Logger.cpp  Logger.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Viewport.cpp  Viewport.hpp  Window.cpp  Window.hpp  gl.h
libs/core/Events/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
libs/glad/: CMakeLists.txt
libs/glad/src/: glad.c
libs/imgui/: CMakeLists.txt
libs/io/: CMakeLists.txt
libs/renderer/: BasicCube.hpp  BasicRenderer.cpp  BasicRenderer.hpp  Buffers.cpp  Buffers.hpp  CMakeLists.txt  Camera.hpp  Entity.hpp  FpsCameraMover.cpp  FpsCameraMover.hpp  Lights.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  Renderer.hpp  RendererExport.hpp  RendererV2.cpp  RendererV2.hpp  Scene.cpp  Scene.hpp  SceneV2.cpp  SceneV2.hpp  Shader.cpp  Shader.hpp  SimulatedEntity.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  stb_image.cpp
libs/renderer/Shapes/: Square.cpp  Square.hpp
libs/renderer/shaders/: SimulatedEntity.vert  modelOutline.frag  modelOutline.vert  modelShader.frag  screenShader.frag
libs/utils/: CMakeLists.txt  Conversion.hpp
scripts/: Setup-Linux.sh  Setup-Windows.bat
